--- a/SDSY/Form1.resx
+++ b/SDSY/Form1.resx
@@ -126,4 +126,7 @@
   <metadata name="backgroundWorker2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>278, 17</value>
   </metadata>
+  <data name="label9.Text" xml:space="preserve">
+    <value>Przed włączeniem programu należy zamknąć wszystkie otwarte arkusze kalkulacyjne, ponieważ program podczas zapisu do "Xlsx" działa na otwartym arkuszu i podczas jego zamukania zamyka wszystkie otwarte arkusze</value>
+  </data>
 </root>
